fixed alignment issues

--- a/app/css/theme.less
+++ b/app/css/theme.less
@@ -155,7 +155,8 @@ footer {
 }
 
 #topLogos {
-display: block;	
+	display: block;	
+	padding-left: 2%;
 }
 
 #content21 {
@@ -289,9 +290,9 @@ section#home {
 
 .counterp {
 	position: absolute;
-	top: 175px;
-	left: 1035px;
-	width: 100%;
+	top: 50%;
+	left: 88.5%; /*1035px*/
+	width: 50px;
 	color: #00AEEF;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 600;
@@ -300,9 +301,9 @@ section#home {
 
 .counterd {
 	position: absolute;
-	top: 173px;
-	left: 393px;
-	width: 100%;
+	top: 50%;
+	left: 33.8%;
+	width: 50px;
 	color: #00AEEF;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 600;
@@ -312,9 +313,9 @@ section#home {
 
 .countern {
 	position: absolute;
-	top: 175px;
-	left: 685px;
-	width: 100%;
+	top: 50%;
+	left: 58.5%;
+	width: 50px;
 	color: #00AEEF;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 600;
@@ -322,7 +323,7 @@ section#home {
 }
 
 #dfpdxtext {
-	margin-top: 35px;
+	margin-top: 45px;
 }
 
 #eastmantext {
@@ -330,7 +331,7 @@ section#home {
 }
 
 #irdtext {
-	margin-top: 50px;
+	margin-top: 40px;
 }
 
 #htitext {
